<resources>
    <string name="app_name">Insta_clone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="enter_email">Enter Email</string>
    <string name="login_image">Login Image</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="need_new_account">Need new account ?</string>
    <string name="or_login_using_your">or login using your</string>
    <string name="phone">Phone</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="find_friiends">Find Friiends</string>
    <string name="find_friends">Find Friends</string>
    <string name="add_item">Add Item</string>
    <string name="complete">Complete</string>
    <string name="enter_item">Enter Item</string>
    <string name="there_is_no_item">There is no item</string>
    <string name="tag">http://tutorials.jenkov.com</string>
</resources>
