<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/Register_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/login_image"
        android:scaleType="fitCenter"

        android:src="@drawable/signup_photo" />

    <EditText
        android:id="@+id/Register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Register_image"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="4dp" />

    <EditText
        android:id="@+id/Register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Register_email"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="4dp" />



    <Button
        android:id="@+id/Register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Register_password"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttons"
        android:padding="4dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/already_have_account_link"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Register_button"
        android:text="@string/already_have_an_account"
        android:layout_margin="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="23dp"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        />

</RelativeLayout>