<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorAccent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/layout_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/login_photo"

                android:contentDescription="@string/login_image" />

           <EditText
               android:id="@+id/login_email"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignParentStart="true"
               android:layout_below="@+id/layout_image"
               android:hint="@string/enter_email"
               android:inputType="textEmailAddress"
               android:background="@drawable/inputs"
               android:padding="4dp"
               android:drawableStart="@drawable/email"
               android:layout_marginTop="25dp"
               android:layout_marginLeft="17dp"
               android:layout_marginRight="17dp"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forget_password_link"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:text="@string/forgot_password"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button"
                android:layout_below="@+id/login_password"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textColor="@android:color/background_light"
                android:background="@drawable/buttons"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/need_new_account"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/forget_password_link"
                android:text="@string/need_new_account"
                android:layout_margin="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/need_new_account"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="15dp"
                android:text="@string/or_login_using_your"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp"

                android:textStyle="bold" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_login_button"
                android:layout_below="@+id/login_using"
                android:padding="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:text="@string/phone"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@android:color/background_light"
                android:drawableStart="@drawable/phone"
                android:background="@drawable/buttons"
                />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>